@@ -840,14 +840,23 @@ def manage_communities_view(context, request):
                       "label": "Immediately",
                       "selected": alerts_pref == IProfile.ALERT_IMMEDIATELY,
                     },
-                    { "value": IProfile.ALERT_DIGEST,
-                      "label": "Digest",
-                      "selected": alerts_pref == IProfile.ALERT_DIGEST,
+                    { "value": IProfile.ALERT_DAILY_DIGEST,
+                      "label": "Daily Digest",
+                      "selected": alerts_pref == IProfile.ALERT_DAILY_DIGEST,
                     },
                     { "value": IProfile.ALERT_NEVER,
                       "label": "Never",
                       "selected": alerts_pref == IProfile.ALERT_NEVER,
-                    }],
+                    },
+                    { "value": IProfile.ALERT_WEEKLY_DIGEST,
+                      "label": "Weekly Digest",
+                      "selected": alerts_pref == IProfile.ALERT_WEEKLY_DIGEST,
+                    },
+                    { "value": IProfile.ALERT_BIWEEKLY_DIGEST,
+                      "label": "Every two weeks Digest",
+                      "selected": alerts_pref == IProfile.ALERT_BIWEEKLY_DIGEST,
+                    },
+                ],
                 'may_leave': may_leave(userid, community),
             }
             communities.append(display_community)
